@@ -2,12 +2,15 @@
 \alias{numSummary}
 \alias{print.numSummary}
 
-\title{Mean, Standard Deviation, and Quantiles for Numeric Variables}
+\title{Summary Statistics for Numeric Variables}
 \description{
-\code{numSummary} creates neatly formatted tables of means, standard deviations, and quantiles of numeric variables.
+\code{numSummary} creates neatly formatted tables of means, standard deviations, coefficients of variation,
+skewness, kurtosis, and quantiles of numeric variables.
 }
 \usage{
-numSummary(data, statistics=c("mean", "sd", "quantiles"), 
+numSummary(data, 
+	statistics=c("mean", "sd", "quantiles", "cv", "skewness", "kurtosis"),
+	type=c("1", "2", "3"),
     quantiles=c(0, .25, .5, .75, 1), groups)
     
 \method{print}{numSummary}(x, ...)
@@ -15,8 +18,12 @@ numSummary(data, statistics=c("mean", "sd", "quantiles"),
 
 \arguments{
   \item{data}{a numeric vector, matrix, or data frame.}
-  \item{statistics}{any of \code{"mean"}, \code{"sd"}, or \code{"quantiles"}, 
-    defaulting to all three.}
+  \item{statistics}{any of \code{"mean"}, \code{"sd"}, \code{"quantiles"}, 
+  	\code{"cv"} (coefficient of variation --- sd/mean), \code{"skewness"}, or \code{"kurtosis"},
+    defaulting to the first three.}
+  \item{type}{definition to use in computing skewness and kurtosis; see the 
+  	\code{link[e1071]{skewness}} and \code{link[e1071]{kurtosis}} functions in the \pkg{e1071}
+  	package. The default is \code{"1"}.}
   \item{quantiles}{quantiles to report; default is \code{c(0, 0.25, 0.5, 0.75, 1)}.}
   \item{groups}{optional variable, typically a factor, to be used to partition the data.}
   \item{x}{object of class \code{"numSummary"} to print.}
@@ -31,12 +38,14 @@ statistics to be reported along with information on missing data, if there are a
 \author{John Fox \email{jfox@mcmaster.ca}}
 
 
-\seealso{\code{\link[base]{mean}}, \code{\link[stats]{sd}}, \code{\link[stats]{quantile}}.}
+\seealso{\code{\link[base]{mean}}, \code{\link[stats]{sd}}, \code{\link[stats]{quantile}},
+	\code{link[e1071]{skewness}}, \code{link[e1071]{kurtosis}}.}
 
 \examples{
 library(car)
 Prestige[1, "income"] <- NA
-numSummary(Prestige[,c("income", "education")])
+numSummary(Prestige[,c("income", "education")], 
+	statistics=c("mean", "sd", "quantiles", "cv", "skewness", "kurtosis"))
 numSummary(Prestige[,c("income", "education")], groups=Prestige$type)
 remove(Prestige)
 }
